# domain-driven-hexagon-python

./: README.md  pyproject.toml
rippling/: manage.py  urls.py
rippling/common/: database.py  document_base.py  router.py
rippling/common/domain/value_objects/: permission.py
rippling/django_main/: apps.py  asgi.py  settings.py  urls.py  wsgi.py
rippling/reports_module/: reports_di_container.py
rippling/reports_module/core/: guard.py
rippling/reports_module/core/api/: id.response.dto.py  urls.py  viewset_base.py
rippling/reports_module/core/ddd/: command_base.py  dto_base.py  entity_base.py  mapper.py  repository_base.py  service_base.py
rippling/reports_module/modules/connected_report/: connected_report_di.py
rippling/reports_module/modules/connected_report/application/: connected_report_service.py
rippling/reports_module/modules/connected_report/infrastructure/: connected_report_mapper.py
rippling/reports_module/modules/connected_report/interfaces/: connected_report_dto.py  i_connected_report_mapper.py  i_connected_report_repository.py  i_connected_report_service.py
rippling/reports_module/modules/embedded_report/: embedded_report_di.py
rippling/reports_module/modules/embedded_report/application/: embedded_report_service.py
rippling/reports_module/modules/embedded_report/infrastructure/: embedded_report_mapper.py
rippling/reports_module/modules/embedded_report/interfaces/: embedded_report_dto.py  i_embedded_report_mapper.py  i_embedded_report_repository.py  i_embedded_report_service.py
(+19 files in other folders)
